force-app/main/default/objects/Visitation_Plan__c/Visitation_Plan__c.object-meta.xml
<CustomObject>
    <label>Visitation Plan</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Visitation Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>