force-app/main/default/objects/Visitation_Plan__c/fields/Court_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Court_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court Ordered</label>
    <type>Checkbox</type>
</CustomField>