force-app/main/default/objects/Visitation_Plan__c/fields/Explain__c.field-meta.xml
<CustomField>
    <fullName>Explain__c</fullName>
    <label>Explain</label>
    <type>TextArea</type>
</CustomField>