force-app/main/default/objects/Visitation_Plan__c/fields/Explain_Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Explain_Visit_Plan__c</fullName>
    <label>Explain Visit Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>