force-app/main/default/objects/Visitation_Plan__c/fields/Explain_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Explain_Visitor__c</fullName>
    <label>Explain Visitor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>