force-app/main/default/objects/Visitation_Plan__c/fields/ExplainChild__c.field-meta.xml
<CustomField>
    <fullName>ExplainChild__c</fullName>
    <label>Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>