force-app/main/default/objects/Visitation_Plan__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 time per week</fullName>
            </value>
            <value>
                <fullName>2 times per week</fullName>
            </value>
            <value>
                <fullName>3 times per week</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Unscheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>