force-app/main/default/objects/Visitation_Plan__c/fields/No_visits_allowed__c.field-meta.xml
<CustomField>
    <fullName>No_visits_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No visits allowed</label>
    <type>Checkbox</type>
</CustomField>