force-app/main/default/objects/Visitation_Plan__c/fields/Person_involved__c.field-meta.xml
<CustomField>
    <fullName>Person_involved__c</fullName>
    <label>Person involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>