force-app/main/default/objects/Visitation_Plan__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Visitation Plans</relationshipLabel>
    <relationshipName>Visitation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>