force-app/main/default/objects/Visitation_Plan__c/fields/Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Duration__c</fullName>
    <label>Visit Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 hour</fullName>
            </value>
            <value>
                <fullName>2 hours</fullName>
            </value>
            <value>
                <fullName>Day visit</fullName>
            </value>
            <value>
                <fullName>Less than 1 hour</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>