force-app/main/default/objects/Visitation_Plan__c/fields/Visitor_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Transportation__c</fullName>
    <label>Visitor Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency to provide transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parents to provide transportation</fullName>
            </value>
            <value>
                <fullName>Shared transportation</fullName>
            </value>
            <value>
                <fullName>Transportation not required</fullName>
            </value>
            <value>
                <fullName>Foster parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>